fix: overflow suggestions

--- a/src/components/tolki-chat/styles/partials/_suggestions.scss
+++ b/src/components/tolki-chat/styles/partials/_suggestions.scss
@@ -26,6 +26,7 @@
   flex: 1;
   height: 30px;
   overflow-x: auto;
+  overflow-y: hidden;
   padding: 8px 20px 0 20px;
 
   -ms-overflow-style: none; /* Internet Explorer 10+ */
